source/commons/bell/antlrparser/.antlr/bellParser.java
// Generated from /Users/aa/Documents/Max 8/Packages/bach/source/commons/bell/antlrparser/bell.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class bellParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, RANGE=2, UINT=3, UFLOAT=4, UPITCH=5, K_PI=6, BTSYMBOL=7, DQSYMBOL=8, 
		SQSYMBOL=9, EMPTYSYMBOL=10, BACHNULL=11, BACHNIL=12, IF=13, THEN=14, ELSE=15, 
		WHILE=16, FOR=17, IN=18, AS=19, WITH=20, DO=21, COLLECT=22, INLET=23, 
		INTINLET=24, RATINLET=25, FLOATINLET=26, PITCHINLET=27, OUTLET=28, DIRINLET=29, 
		DIROUTLET=30, BIF=31, OF=32, GLOBALVAR=33, PATCHERVAR=34, LOCALVAR=35, 
		NAMEDPARAM=36, KEEP=37, UNKEEP=38, INIT=39, ARGCOUNT=40, PUSH=41, POP=42, 
		CLOSED=43, NTH=44, PICK=45, KEY=46, ANTH=47, APICK=48, NULLIFY=49, ASSIGN=50, 
		WHITESPACE=51, NEWATOM=52, POW=53, APOW=54, TIMES=55, ATIMES=56, DIVDIV=57, 
		ADIVDIV=58, DIV=59, ADIV=60, REM=61, AREM=62, PLUS=63, APLUS=64, UPLUS=65, 
		MINUS=66, AMINUS=67, UMINUS=68, EQUAL=69, NEQ=70, LOGNOT=71, BITNOT=72, 
		LT=73, GT=74, LEQ=75, GEQ=76, BITAND=77, ABITAND=78, BITXOR=79, ABITXOR=80, 
		BITOR=81, ABITOR=82, LOGAND=83, LOGANDEXT=84, ALOGAND=85, ALOGANDEXT=86, 
		LOGXOR=87, ALOGXOR=88, LOGOR=89, ALOGOR=90, LOGOREXT=91, ALOGOREXT=92, 
		LSHIFT=93, ALSHIFT=94, RSHIFT=95, ARSHIFT=96, REPEAT=97, AREPEAT=98, AAPPLY=99, 
		ACONCAT=100, ARCONCAT=101, OPEN=102, PARAMS=103, FUNDEF=104, LIFT=105, 
		ELLIPSIS=106, BLOCKCOMMENT=107, LINECOMMENT=108, ANYTHING=109;
	public static final int
		RULE_everything = 0, RULE_program = 1, RULE_funarg = 2, RULE_funargList = 3, 
		RULE_liftedargList = 4, RULE_fundef = 5, RULE_sequence = 6, RULE_nullified = 7, 
		RULE_whileloop = 8, RULE_forarg = 9, RULE_forargList = 10, RULE_forloop = 11, 
		RULE_argsByNameList = 12, RULE_argsByPositionList = 13, RULE_simpleFuncall = 14, 
		RULE_dataFlowAndLvalueSpecsUItem = 15, RULE_dataFlowAndLvalueSpecsItem = 16, 
		RULE_funcall = 17, RULE_var = 18, RULE_lvalueSpecsUFinal = 19, RULE_lvalueSpecsFinal = 20, 
		RULE_lvalueSpecs = 21, RULE_lvalue = 22, RULE_fakeLvalue = 23, RULE_listEnd = 24, 
		RULE_expr = 25, RULE_item = 26, RULE_assignment = 27, RULE_conditional = 28, 
		RULE_list = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"everything", "program", "funarg", "funargList", "liftedargList", "fundef", 
			"sequence", "nullified", "whileloop", "forarg", "forargList", "forloop", 
			"argsByNameList", "argsByPositionList", "simpleFuncall", "dataFlowAndLvalueSpecsUItem", 
			"dataFlowAndLvalueSpecsItem", "funcall", "var", "lvalueSpecsUFinal", 
			"lvalueSpecsFinal", "lvalueSpecs", "lvalue", "fakeLvalue", "listEnd", 
			"expr", "item", "assignment", "conditional", "list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'...'", null, null, null, "'pi'", null, null, null, null, 
			"'null'", "'nil'", "'if'", "'then'", "'else'", "'while'", "'for'", "'in'", 
			"'as'", "'with'", "'do'", "'collect'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'keep'", "'unkeep'", 
			"'init'", "'$argcount'", "'['", "']'", "')'", "':'", "'::'", "'.'", "':='", 
			"'::='", "';'", "'='", null, null, "'**'", "'**='", "'*'", "'*='", "'//'", 
			"'//='", "'/'", "'/='", "'%'", "'%='", null, "'+='", "'+'", null, "'-='", 
			"'-'", "'=='", "'!='", "'!'", "'~'", "'<'", "'>'", "'<='", "'>='", "'&'", 
			"'&='", "'^'", "'^='", "'|'", "'|='", "'&&'", "'&&&'", "'&&='", "'&&&='", 
			"'^^'", "'^^='", "'||'", "'||='", "'|||'", "'|||='", "'<<'", "'<<='", 
			"'>>'", "'>>='", "':*'", "':*='", "'.='", "'_='", "'!_='", null, null, 
			"'->'", "'-^'", "'<...>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "RANGE", "UINT", "UFLOAT", "UPITCH", "K_PI", "BTSYMBOL", 
			"DQSYMBOL", "SQSYMBOL", "EMPTYSYMBOL", "BACHNULL", "BACHNIL", "IF", "THEN", 
			"ELSE", "WHILE", "FOR", "IN", "AS", "WITH", "DO", "COLLECT", "INLET", 
			"INTINLET", "RATINLET", "FLOATINLET", "PITCHINLET", "OUTLET", "DIRINLET", 
			"DIROUTLET", "BIF", "OF", "GLOBALVAR", "PATCHERVAR", "LOCALVAR", "NAMEDPARAM", 
			"KEEP", "UNKEEP", "INIT", "ARGCOUNT", "PUSH", "POP", "CLOSED", "NTH", 
			"PICK", "KEY", "ANTH", "APICK", "NULLIFY", "ASSIGN", "WHITESPACE", "NEWATOM", 
			"POW", "APOW", "TIMES", "ATIMES", "DIVDIV", "ADIVDIV", "DIV", "ADIV", 
			"REM", "AREM", "PLUS", "APLUS", "UPLUS", "MINUS", "AMINUS", "UMINUS", 
			"EQUAL", "NEQ", "LOGNOT", "BITNOT", "LT", "GT", "LEQ", "GEQ", "BITAND", 
			"ABITAND", "BITXOR", "ABITXOR", "BITOR", "ABITOR", "LOGAND", "LOGANDEXT", 
			"ALOGAND", "ALOGANDEXT", "LOGXOR", "ALOGXOR", "LOGOR", "ALOGOR", "LOGOREXT", 
			"ALOGOREXT", "LSHIFT", "ALSHIFT", "RSHIFT", "ARSHIFT", "REPEAT", "AREPEAT", 
			"AAPPLY", "ACONCAT", "ARCONCAT", "OPEN", "PARAMS", "FUNDEF", "LIFT", 
			"ELLIPSIS", "BLOCKCOMMENT", "LINECOMMENT", "ANYTHING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bell.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	 
	    
	    bool ending = false;


	public bellParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EverythingContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public EverythingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_everything; }
	}

	public final EverythingContext everything() throws RecognitionException {
		EverythingContext _localctx = new EverythingContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_everything);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramSequenceContext extends ProgramContext {
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public TerminalNode EOF() { return getToken(bellParser.EOF, 0); }
		public ProgramSequenceContext(ProgramContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramNamedparamContext extends ProgramContext {
		public TerminalNode NAMEDPARAM() { return getToken(bellParser.NAMEDPARAM, 0); }
		public ProgramNamedparamContext(ProgramContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramEOFContext extends ProgramContext {
		public TerminalNode EOF() { return getToken(bellParser.EOF, 0); }
		public ProgramEOFContext(ProgramContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramSequenceNamedparamContext extends ProgramContext {
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public TerminalNode NAMEDPARAM() { return getToken(bellParser.NAMEDPARAM, 0); }
		public ProgramSequenceNamedparamContext(ProgramContext ctx) { copyFrom(ctx); }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new ProgramEOFContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(EOF);
				}
				break;
			case 2:
				_localctx = new ProgramSequenceContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				sequence();
				setState(64);
				match(EOF);
				}
				break;
			case 3:
				_localctx = new ProgramSequenceNamedparamContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				sequence();
				setState(67);
				match(NAMEDPARAM);
				}
				break;
			case 4:
				_localctx = new ProgramNamedparamContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				match(NAMEDPARAM);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunargContext extends ParserRuleContext {
		public FunargContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funarg; }
	 
		public FunargContext() { }
		public void copyFrom(FunargContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunargVarContext extends FunargContext {
		public TerminalNode LOCALVAR() { return getToken(bellParser.LOCALVAR, 0); }
		public TerminalNode ASSIGN() { return getToken(bellParser.ASSIGN, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public FunargVarContext(FunargContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunargEllipsisContext extends FunargContext {
		public TerminalNode ELLIPSIS() { return getToken(bellParser.ELLIPSIS, 0); }
		public FunargEllipsisContext(FunargContext ctx) { copyFrom(ctx); }
	}

	public final FunargContext funarg() throws RecognitionException {
		FunargContext _localctx = new FunargContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funarg);
		int _la;
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOCALVAR:
				_localctx = new FunargVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(LOCALVAR);
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(73);
					match(ASSIGN);
					setState(74);
					list();
					}
				}

				}
				break;
			case ELLIPSIS:
				_localctx = new FunargEllipsisContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(ELLIPSIS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunargListContext extends ParserRuleContext {
		public List<FunargContext> funarg() {
			return getRuleContexts(FunargContext.class);
		}
		public FunargContext funarg(int i) {
			return getRuleContext(FunargContext.class,i);
		}
		public FunargListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funargList; }
	}

	public final FunargListContext funargList() throws RecognitionException {
		FunargListContext _localctx = new FunargListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funargList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			funarg();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(81);
				match(T__0);
				setState(82);
				funarg();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiftedargListContext extends ParserRuleContext {
		public TerminalNode LIFT() { return getToken(bellParser.LIFT, 0); }
		public List<TerminalNode> LOCALVAR() { return getTokens(bellParser.LOCALVAR); }
		public TerminalNode LOCALVAR(int i) {
			return getToken(bellParser.LOCALVAR, i);
		}
		public LiftedargListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_liftedargList; }
	}
